--- a/Bil372_Odev1_Grup6/bin/Bil372_Odev1_Grup6.dll.config
+++ b/Bil372_Odev1_Grup6/bin/Bil372_Odev1_Grup6.dll.config
@@ -56,4 +56,10 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+	<connectionStrings>
+		<add
+            name="IMECE"
+            providerName="System.Data.SqlClient"
+            connectionString="Data Source=DESKTOP-6NC1F08;Initial Catalog=IMECE;Integrated Security=True" />
+	</connectionStrings>
 </configuration>
