Database operations are added to controllers and models are fixed.
Database operations are added to controllers and models are fixed.

--- a/Bil372_Odev1_Grup6/Web.config
+++ b/Bil372_Odev1_Grup6/Web.config
@@ -57,11 +57,8 @@
     </compilers>
   </system.codedom>
 	<connectionStrings>
-		<add
-            name="IMECE"
-            providerName="System.Data.SqlClient"
-            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=IMECE;Integrated Security=True" />
-	</connectionStrings>
+		<add name="Uygulama" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=Uygulama;Integrated Security=True" />
+	<add name="UygulamaEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;initial catalog=Uygulama;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
