Models and controllers are fixed.

--- a/Bil372_Odev1_Grup6/Bil372_Odev1_Grup6.csproj
+++ b/Bil372_Odev1_Grup6/Bil372_Odev1_Grup6.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Models\FLOW.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\LINKINGBRANDORGS.cs" />
     <Compile Include="Models\MANUFACTURERS.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
