Brand_orgs pages and controller are created. Organisations pages are fixed.

--- a/Bil372_Odev1_Grup6/Bil372_Odev1_Grup6.csproj
+++ b/Bil372_Odev1_Grup6/Bil372_Odev1_Grup6.csproj
@@ -131,6 +131,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\Brand_OrgsController.cs" />
     <Compile Include="Controllers\DatabaseController.cs" />
     <Compile Include="Controllers\FeaturesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -564,6 +565,9 @@
     <Content Include="Views\Product_Brands\Delete.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Brand_Orgs\Create.cshtml" />
+    <Content Include="Views\Brand_Orgs\Search2.cshtml" />
+    <Content Include="Views\Brand_Orgs\Search1.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
