--- a/Bil372_Odev1_Grup6/Bil372_Odev1_Grup6.csproj
+++ b/Bil372_Odev1_Grup6/Bil372_Odev1_Grup6.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Brand_OrgsController.cs" />
     <Compile Include="Controllers\DatabaseController.cs" />
+    <Compile Include="Controllers\ExceptionController.cs" />
     <Compile Include="Controllers\FeaturesController.cs" />
     <Compile Include="Controllers\FlowController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -574,10 +575,11 @@
     <Content Include="Views\Product_Features\Create.cshtml" />
     <Content Include="Views\Product_Features\Search1.cshtml" />
     <Content Include="Views\Product_Features\Search2.cshtml" />
-    <Content Include="Views\Flow\inTransfer.cshtml" />
+    <Content Include="Views\Exception\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Flow\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.min.css.map" />
