--- a/Bil372_Odev1_Grup6/Web.config
+++ b/Bil372_Odev1_Grup6/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -60,7 +60,7 @@
 		<add
             name="IMECE"
             providerName="System.Data.SqlClient"
-            connectionString="Data Source=DESKTOP-6NC1F08;Initial Catalog=IMECE;Integrated Security=True" />
+            connectionString="Data Source=DESKTOP-6NC1F08;Initial Catalog=IMECE;Integrated Security=True;MultipleActiveResultSets=True" />
 	</connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
