--- a/Bil372_Odev1_Grup6/Web.config
+++ b/Bil372_Odev1_Grup6/Web.config
@@ -60,7 +60,7 @@
 		<add
             name="IMECE"
             providerName="System.Data.SqlClient"
-            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=IMECE;Integrated Security=True;MultipleActiveResultSets=True" />
+            connectionString="Data Source=DESKTOP-6NC1F08;Initial Catalog=IMECE;Integrated Security=True;MultipleActiveResultSets=True" />
 	</connectionStrings>
 	<entityFramework>
 		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
